feat: update sidebar.

--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -1,4 +1,24 @@
+@import "~element-ui/packages/theme-chalk/src/index";
+
 // cover some element-ui styles
+.el-menu {
+  height: 100%;
+  border: none;
+}
 .el-menu-item.is-active {
-  background-color: #444;
+  background-color: #dadada !important;
+}
+
+.el-menu--collapse .el-menu-item span,
+.el-menu--collapse .el-submenu .el-submenu__title span {
+  height: 0;
+  width: 0;
+  overflow: hidden;
+  visibility: hidden;
+  display: inline-block;
+}
+
+.el-menu--collapse .el-menu-item .el-submenu__icon-arrow,
+.el-menu--collapse .el-submenu .el-submenu__title .el-submenu__icon-arrow {
+  display: none;
 }
