--- a/src/styles/element-variables.scss
+++ b/src/styles/element-variables.scss
@@ -4,18 +4,20 @@ $--color-primary: #444;
 /* 改变 icon 字体路径变量，必需 */
 $--font-path: "~element-ui/lib/theme-chalk/fonts";
 
+// navbar
+$navbarHeight: 60px;
+
 // sidebar
-$menuText: #909399;
+$menuText: #444;
 $menuActiveText: #444; //https://github.com/ElemeFE/element/issues/12951
-$menuBg: #fff;
 
 $sideBarWidth: 210px;
 
-@import "~element-ui/packages/theme-chalk/src/index";
+// @import "~element-ui/packages/theme-chalk/src/index";
 
 :export {
+  navbarHeight: $navbarHeight;
   menuText: $menuText;
   menuActiveText: $menuActiveText;
-  menuBg: $menuBg;
   sideBarWidth: $sideBarWidth;
 }
